--- a/Applications/ParaView/Testing/Python/CMakeLists.txt
+++ b/Applications/ParaView/Testing/Python/CMakeLists.txt
@@ -95,7 +95,7 @@ foreach (tfile IN LISTS PVBATCH_TESTS)
 endforeach ()
 if (PARAVIEW_USE_MPI AND MPIEXEC_EXECUTABLE)
   # run the tests in parallel
-  set(${_vtk_build_test}_NUMPROCS 3)
+  set(_NUMPROCS 3)
   paraview_add_test_pvbatch_mpi(
     JUST_VALID
     ${PVBATCH_TESTS}
