Adding a Logo Source
This add a new source to ParaView, Logo.
This Logo is a simple vtk class that generate an ImageData
from a vtkTexture, it then pass it to a dedicated vtkLogoSourceRepresentation
that uses a vtkLogoRepresentation to display it on the render view.

--- a/ParaViewCore/ClientServerCore/Rendering/CMakeLists.txt
+++ b/ParaViewCore/ClientServerCore/Rendering/CMakeLists.txt
@@ -48,6 +48,7 @@ set(classes
   vtkGlyph3DRepresentation
   vtkImageSliceRepresentation
   vtkImageVolumeRepresentation
+  vtkLogoSourceRepresentation
   vtkMoleculeRepresentation
   vtkMPIMoveData
   vtkOutlineRepresentation
