use correct logic to determine need for ordered compositing
vtkGeometryRepresentation failed to correctly determine when ordered
compositing was needed when block opacities were involved. The block
opacities on the mapper, which is what was checked to determine if
ordeded compositing was needed, are not updated in `REQUEST_UPDATE` and
hence cannot be relied upon. This also exposed other similar issues with the
logic when checking for scalar opacity when map scalars was off.

Fixed that. Now, vtkGeometryRepresentation explicitly checks using state
(and not data) whether the mapper may render translucent geometry and
then requests ordered compositing accordingly.

Fixes #19037

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -661,6 +661,7 @@ list(APPEND TESTS_WITH_BASELINES
   AnimatePipelineTime.xml
   AngularPeriodicFilter.xml
   3DWidgetInCustomFilter.xml
+  BlockOpacities.xml
   CalcParens.xml
   Calculator.xml
   CalculatorInput.xml
@@ -1201,6 +1202,7 @@ set(SelectionLinkMultiple_DISABLE_CRS TRUE)
 set(SelectionLinkRemove_DISABLE_CRS TRUE)
 set(SelectionLinkReaction_DISABLE_CRS TRUE)
 set(ExportSelectionToCSV_DISABLE_CRS TRUE)
+set(BlockOpacities_DISABLE_CRS TRUE)
 
 # These tests cannot be run using ctest -j since they are affected by focus
 # changed events.
