enable cinema with python 3
The test changes are because iter ordering changed with python3.
We never offered a guarantee on the order anyway, only that it
must match the order in the json file, so this looser test
is better anyway.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -330,9 +330,7 @@ else ()
     VTK::RenderingMatplotlib)
 endif ()
 
-if (PARAVIEW_ENABLE_PYTHON AND (NOT PARAVIEW_PYTHON_VERSION STREQUAL "3"))
-  # cinema_python doesn't support Python 3 yet
-  # paraview/paraview#17353
+if (PARAVIEW_ENABLE_PYTHON)
   list(APPEND paraview_requested_modules
     ParaView::CinemaPython
     ParaView::CinemaReader)
