Fix a bug with the OpacityWidget when range was changing
When range was changing from a high minimum to a low maximum
a bug could happen where there min was not correctly set adn the opaicty widget
became white.
This fixes it and add a test for it.

Fix #19090

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -246,6 +246,7 @@ ExternalData_Expand_Arguments(ParaViewData _
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/OBBMajorAxis.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/OBBMediumAxis.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/OBBMinorAxis.png}"
+  "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/OpacityWidgetRange.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/PartitionedDataSet_Slice.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/PartitionedDataSet_Surface.png}"
   "DATA{${CMAKE_CURRENT_SOURCE_DIR}/../Data/Baseline/PartitionedDataSetCollection_Slice.png}"
@@ -408,6 +409,7 @@ SET (TESTS_WITHOUT_BASELINES
   FindWidget.xml
   ModifyGUIWindowTitle.xml
   OpenHelp.xml
+  OpacityWidgetRange.xml
   PartialArrayInLineChart.xml
   PointCellDataConversion.xml
   ReloadCGNSFile.xml
