expose block selection for multiblock volume rendering
We had lost ability to choose the block to volume render when dealing
with multiblock datasetes. Bringing that back. Fixes #19123.

pqCompositeTreePropertyWidget/pqCompositeDataInformationTreeModel was
updated to not allow user to select non-leaf nodes for volume rendering
since volume rendering only supports leaf nodes.

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -743,6 +743,7 @@ list(APPEND TESTS_WITH_BASELINES
   MultiBlockAttributes1.xml
   MultiBlockInspector.xml
   MultiBlockSingleBlock.xml
+  MultiBlockVolumeRendering.xml
   MultiSliceMultiBlock.xml
   MultiSliceWavelet.xml
   NormalGlyphs.xml
@@ -1306,7 +1307,7 @@ set (VolumeRenderingWithContour_DISABLE_CRS TRUE)
 set (VolumeRenderingWithContour_THRESHOLD 50)
 set (VolumeNoMapScalars_DISABLE_CRS TRUE)
 set (VolumeNoMapScalars_THRESHOLD 50)
-
+set (MultiBlockVolumeRendering_DISABLE_CRS TRUE)
 
 # Histogram filter produces different results when running in parallel, so
 # disable it.
