Writers support choose arrays to write
Adding a generic mechanism to all writers to choose which arrays to
write. This is done by putting the `vtkPassSelectedArrays` filter in the
writer pipeline to extract out arrays as requested.

Fixes #19054.

--- a/Applications/ParaView/Testing/Python/CMakeLists.txt
+++ b/Applications/ParaView/Testing/Python/CMakeLists.txt
@@ -73,6 +73,7 @@ paraview_add_test_python(
   NO_VALID NO_RT
   ExportCSV.py
   Plot3DReader.py
+  SaveDataWithArraySelection.py
 )
 
 # These tests could run safely in serial and parallel.
@@ -80,6 +81,7 @@ set(PVBATCH_TESTS
   BatchAxesGrid.py
   PLYWriter.py
   VolumeCellSelection.py
+  SaveDataWithArraySelection.py,NO_VALID
 )
 if(NOT APPLE)
   # temporarily disable on mac due to bugs in
