restrict the raytracer backends to what is actually available
(cherry picked from commit cfe4e6546629b63fafb119b696be8f2d3c8690b6)

--- a/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
@@ -57,6 +57,7 @@ set(classes
   vtkSMPlotMatrixViewProxy
   vtkSMRangedTransferFunctionDomain
   vtkSMRenderViewProxy
+  vtkSMRendererDomain
   vtkSMRepresentationProxy
   vtkSMRepresentationTypeDomain
   vtkSMRepresentedArrayListDomain
