--- a/CMake/paraview_client_initializer.cxx.in
+++ b/CMake/paraview_client_initializer.cxx.in
@@ -115,6 +115,8 @@ pq@_paraview_client_NAME@Initializer::Status pq@_paraview_client_NAME@Initialize
   }
 #endif
 
+  vtkPVPluginTracker::GetInstance()->LoadPluginConfigurationXMLs("@_paraview_client_NAME@");
+
   // Create main window.
   this->MainWindow = new @_paraview_client_MAIN_WINDOW_CLASS@();
 
