cmake: pass the actual cmake install destination down
Rather than trying to reconstruct it in the test, just tell the test
where the `paraview-config.cmake` will be.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1043,7 +1043,7 @@ if (BUILD_TESTING AND PARAVIEW_INSTALL_DEVELOPMENT_FILES)
     -DPARAVIEW_INSTALL_DIR:PATH=${CMAKE_INSTALL_PREFIX}
     -DPARAVIEW_SOURCE_DIR:PATH=${CMAKE_SOURCE_DIR}
     -DPARAVIEW_TEST_DIR:PATH=${CMAKE_BINARY_DIR}/Testing/Temporary
-    -DPARAVIEW_VERSION:STRING=${PARAVIEW_VERSION}
+    -DPARAVIEW_CMAKE_DESTINATION:STRING=${paraview_cmake_destination}
     -P ${CMAKE_CURRENT_SOURCE_DIR}/CMake/ParaViewTestInstall.cmake)
   set_tests_properties(pv.TestDevelopmentInstall PROPERTIES
     LABELS "paraview"
