Add 4th cinema test for composable float files

--- a/CoProcessing/PythonCatalyst/Testing/Cxx/CMakeLists.txt
+++ b/CoProcessing/PythonCatalyst/Testing/Cxx/CMakeLists.txt
@@ -327,6 +327,25 @@ if (PARAVIEW_BUILD_QT_GUI)
           -P ${CMAKE_CURRENT_SOURCE_DIR}/CinemaExportFullWorkflowTest.cmake)
         set_tests_properties(CinemaExportNoTimesteps PROPERTIES RUN_SERIAL ON)
         _set_standard_test_properties(CinemaExportNoTimesteps)
+
+        add_test(NAME CinemaExportFloatFiles
+          COMMAND ${CMAKE_COMMAND}
+          -DPARAVIEW_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::paraview>
+          -DCOPROCESSING_TEST_DIR:PATH=${CMAKE_BINARY_DIR}/Testing/Temporary
+          -DPARAVIEW_TEST_XML:FILEPATH=${ParaView_SOURCE_DIR}/Applications/ParaView/Testing/XML/CinemaExportFloatFiles.xml
+          -DPVBATCH_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::pvbatch>
+          -DPVPYTHON_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::pvpython>
+          -DCOPROCESSING_DATA_DIR:PATH=${paraview_test_data_directory_output}
+          -DCOPROCESSING_DRIVER_SCRIPT:FILEPATH=${CMAKE_SOURCE_DIR}/Examples/Catalyst/SampleScripts/filedriver.py
+          -DCINEMA_DATABASE_TESTER:FILEPATH=${CMAKE_CURRENT_SOURCE_DIR}/CinemaExportCheck.py
+          -DCINEMA_INPUT_DATA:FILEPATH=${CMAKE_BINARY_DIR}/ExternalData/Testing/Data/cube.vtu
+          -DCINEMA_BATCH_SCRIPT:FILEPATH=cinema/CinemaExportFloatFiles.py
+          -DUSE_MPI:BOOL=FALSE
+          -DTEST_NAME:STRING=CinemaExportFloatFiles
+          -P ${CMAKE_CURRENT_SOURCE_DIR}/CinemaExportFullWorkflowTest.cmake)
+        set_tests_properties(CinemaExportNoTimesteps PROPERTIES RUN_SERIAL ON)
+        _set_standard_test_properties(CinemaExportFloatFiles)
+
       endif()
     else()
       add_test(NAME CinemaExportGeometry
@@ -395,6 +414,28 @@ if (PARAVIEW_BUILD_QT_GUI)
           -P ${CMAKE_CURRENT_SOURCE_DIR}/CinemaExportFullWorkflowTest.cmake)
         set_tests_properties(CinemaExportNoTimesteps PROPERTIES RUN_SERIAL ON)
         _set_standard_test_properties(CinemaExportNoTimesteps)
+    
+        add_test(NAME CinemaExportFloatFiles
+          COMMAND ${CMAKE_COMMAND}
+          -DPARAVIEW_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::paraview>
+          -DCOPROCESSING_TEST_DIR:PATH=${CMAKE_BINARY_DIR}/Testing/Temporary
+          -DPARAVIEW_TEST_XML:FILEPATH=${ParaView_SOURCE_DIR}/Applications/ParaView/Testing/XML/CinemaExportFloatFiles.xml
+          -DPVBATCH_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::pvbatch>
+          -DPVPYTHON_EXECUTABLE:FILEPATH=$<TARGET_FILE:ParaView::pvpython>
+          -DCOPROCESSING_DATA_DIR:PATH=${paraview_test_data_directory_output}
+          -DCOPROCESSING_DRIVER_SCRIPT:FILEPATH=${CMAKE_SOURCE_DIR}/Examples/Catalyst/SampleScripts/filedriver.py
+          -DCINEMA_DATABASE_TESTER:FILEPATH=${CMAKE_CURRENT_SOURCE_DIR}/CinemaExportCheck.py
+          -DCINEMA_INPUT_DATA:FILEPATH=${CMAKE_BINARY_DIR}/ExternalData/Testing/Data/cube.vtu
+          -DCINEMA_BATCH_SCRIPT:FILEPATH=cinema/CinemaExportFloatFiles.py
+          -DUSE_MPI:BOOL=TRUE
+          -DMPIEXEC:FILEPATH=${MPIEXEC_EXECUTABLE}
+          -DMPIEXEC_NUMPROC_FLAG:STRING=${MPIEXEC_NUMPROC_FLAG}
+          -DMPIEXEC_NUMPROCS=1
+          -DMPIEXEC_PREFLAGS:STRING=${MPIEXEC_PREFLAGS}
+          -DTEST_NAME:STRING=CinemaExportFloatFiles
+          -P ${CMAKE_CURRENT_SOURCE_DIR}/CinemaExportFullWorkflowTest.cmake)
+        set_tests_properties(CinemaExportNoTimesteps PROPERTIES RUN_SERIAL ON)
+        _set_standard_test_properties(CinemaExportFloatFiles)
       endif()
 
     endif()
